# pytagbase

./: README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: python.yml
.openapi-generator/: FILES
docs/: Error.md  ErrorContainer.md  Ingest200.md  IngestApi.md  Tag.md  Tag200.md  TagPut200.md  TagSubmission.md  Tags200.md  TagsApi.md
pytagbase/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py
pytagbase/api/: __init__.py  ingest_api.py  tags_api.py
pytagbase/models/: __init__.py  error.py  error_container.py  ingest200.py  tag.py  tag200.py  tag_put200.py  tag_submission.py  tags200.py
test/: test_error.py  test_error_container.py  test_ingest200.py  test_ingest_api.py  test_tag.py  test_tag200.py  test_tag_put200.py  test_tag_submission.py  test_tags200.py  test_tags_api.py
